# glm-ocr-serverless

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.llm  README.md  download_model.py  download_models.py  handler.py  kyc_handler.py  llm_download_model.py  llm_handler.py  pyproject.toml  requirements.txt  start.sh  start_kyc.sh  start_llm.sh
.github/workflows/: publish-ghcr-llm.yml  publish-ghcr.yml
app/: __init__.py
app/api/: __init__.py  dependencies.py  kyc_dependencies.py  kyc_runpod_handler.py  llm_dependencies.py  llm_runpod_handler.py  runpod_handler.py
app/config/: llm_settings.py  settings.py
app/core/: __init__.py  exceptions.py
app/models/: __init__.py  llm_manager.py  model_manager.py
app/schemas/: __init__.py  errors.py  health.py  request.py  response.py
app/services/: __init__.py  health_service.py  image_loader.py  kyc_field_merge.py  kyc_normalizer_service.py  llm_health_service.py  (+4 more)
flash/: .env.example  README.md  __init__.py  endpoints.py  kyc_orchestrator.py  kyc_service.py  kyc_worker.py  pyproject.toml  requirements.txt  settings.py
orchestrator/: .env.example  __init__.py  config.py  main.py  requirements.txt  runpod_client.py  schemas.py
scripts/: local_smoke_test.py  start_flash_dev.sh  start_orchestrator.sh
tests/: __init__.py  test_base64_utils.py  test_config.py  test_exceptions.py  test_flash_kyc_service.py  test_handler.py  test_health_service.py  test_image_loader.py  test_image_utils.py  test_json_utils.py  test_kyc_field_merge.py  test_kyc_handler.py  test_kyc_normalizer.py  test_kyc_schemas.py  test_llm_handler.py  test_model_manager.py  test_mrz_parser.py  test_ocr_service.py  test_pdf_loader.py  test_pdf_utils.py  test_schemas.py
(+10 files in other folders)
